fixes and added stuff for file store: fixed constraints, added batching for updates and deletes, fixed graph mapping